--- a/mem0-modified/pyproject.toml
+++ b/mem0-modified/pyproject.toml
@@ -7,9 +7,10 @@ name = "mem0ai"
 version = "0.1.0"
 description = "Modified mem0 package for healthcare AI agents"
 requires-python = ">=3.8"
+
 dependencies = [
     "anthropic",
-    "cohere", 
+    "cohere",
     "google-generativeai",
     "groq",
     "litellm",
@@ -23,9 +24,8 @@ dependencies = [
     "pymilvus",
     "psycopg2-binary",
     "azure-ai-inference",
-    "fastembed",
+    "fastembed"
 ]
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["llms*", "proxy*", "client*", "graphs*", "memory*", "configs*", "embeddings*", "vector_stores*"]
+[tool.setuptools]
+packages = { find = { where = ["."], include = ["mem0*"] } }
