--- a/mem0-modified/pyproject.toml
+++ b/mem0-modified/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=45", "wheel"]
+requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -27,5 +27,6 @@ dependencies = [
     "fastembed"
 ]
 
-[tool.setuptools]
-packages = { find = { where = ["."], include = ["mem0*"] } }
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["mem0*"]
